--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Momentum</title>
+    <title>Document</title>
 </head>
 <body>
-    
-    <script src="calc.js"></script>
+    <form id="login-form" class="hidden">
+        <input type="text" required maxlength="15" placeholder="What is your name?" />
+        <button>Log In</button>
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
