--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <span></span>
     </div>
     <div id="weather">
-        <span></span><span></span>
+        <span></span>
+        <span></span>
     </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
